fix: comment style on tablet

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -168,6 +168,12 @@
     .content {
       padding: 30px 2px 2px;
     }
+
+    .comment-item {
+      .ui.image.label, .comment-body {
+        line-height: 1.8;
+      }
+    }
   }
 }
 
